# LightSystem

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
cmake/: compiler.cmake
cmake/modules/: FindDMUtils.cmake  FindSFML.cmake
example/: CMakeLists.txt  main.cpp
include/LightSystem/: EmissiveLight.hpp  FlashLight.hpp  Light.hpp  LightSystem.hpp  LineLight.hpp  LocalAmbiantLight.hpp  ShadowSystem.hpp  SpotLight.hpp  SpriteLight.hpp
include/LightSystem/staticData/: staticData.hpp
shaders/: lightAttenuation.frag
src/: CMakeLists.txt  Player.cpp  Player.hpp
src/LightSystem/: CMakeLists.txt  EmissiveLight.cpp  FlashLight.cpp  Light.cpp  Light.hpp  LightSystem.cpp  LineLight.cpp  LocalAmbiantLight.cpp  ShadowSystem.cpp  SpotLight.cpp  SpotLight.hpp  SpriteLight.cpp
